# wren

./: .dockerignore  .env.example  .env.prod  .gitignore  README.md  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.tunnel.yml  docker-compose.yml  justfile  pyproject.toml  ruff.toml
.github/workflows/: cd.yml  ci.yml  healthcheck.yml
.pi/: AGENTS.md
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/.pi/: AGENTS.md
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_accounts.py  0003_roadmaps.py  0004_oauth.py  0005_progress.py  0006_onboarding.py
backend/docker/: serve.sh
backend/src/wren/: __init__.py
backend/src/wren/accounts/: __init__.py  api.py  config.py  injection.py  models.py  notifications.py  onboarding_api.py  passwords.py  repository.py  schemas.py  service.py  session.py  tokens.py  wiring.py
backend/src/wren/api/: __init__.py  main.py
backend/src/wren/api_internal/: __init__.py  main.py
backend/src/wren/core/: __init__.py  app_factory.py  correlation.py  db.py  errors.py  health.py  identity.py  logging.py  metrics.py  observability.py  orm.py  read_contract.py  route_registry.py  section_counts.py  settings.py  state.py
backend/src/wren/oauth/: __init__.py  api.py  authorization.py  cleanup.py  config.py  errors.py  injection.py  keys.py  metadata.py  models.py  pkce.py  redirects.py  repository.py  schemas.py  token_exchange.py  tokens.py  wiring.py
backend/src/wren/progress/: __init__.py  api.py  api_internal.py  models.py  next.py  repository.py  router.py  schemas.py  service.py  summary.py  traversal.py  wiring.py
backend/src/wren/roadmaps/: __init__.py  api.py  api_internal.py  assembly.py  config.py  dag.py  list_schemas.py  listing.py  listing_api.py  models.py  patch.py  projections.py  read_schemas.py  read_service.py  repository.py  router.py  schemas.py  service.py  slugs.py  validation.py  wiring.py
backend/src/wren/skill/: SKILL.md  __init__.py  api.py  content.py
backend/tests/: __init__.py  accounts_fakes.py  conftest.py  oauth_fakes.py  progress_fakes.py  roadmaps_fakes.py  roadmaps_read_builders.py  test_accounts_api.py  test_accounts_config.py  test_accounts_migration.py  test_accounts_passwords.py  test_accounts_service.py  test_accounts_session.py  test_accounts_tokens.py  test_accounts_wiring.py  test_app_factory.py  test_core_section_counts.py  test_correlation.py  test_db.py  test_db_integration.py  test_errors.py  test_event_notifications.py  test_health.py  test_identity.py  test_logging.py  test_metrics.py  test_oauth_api.py  test_oauth_cleanup.py  test_oauth_config.py  test_oauth_keys_metadata.py  test_oauth_migration.py  test_oauth_redirects.py  test_oauth_service.py  test_oauth_tokens.py  test_oauth_wiring.py  test_observability.py  test_progress_api.py  test_progress_api_internal.py  test_progress_e2e.py  test_progress_migration.py  (+30 more)
backend/tests/support/: __init__.py
backend/tests/support/fakes/: __init__.py  accounts_fakes.py  progress_builders.py  progress_fakes.py  roadmaps_fakes.py
contract/: pyproject.toml
contract/tests/: test_header_constants.py  test_schema_mirror.py  test_scope_constants.py
deployments/alertmanager/: alertmanager.yml
deployments/cloudflare/: config.yml
deployments/prometheus/: alerts.yml  prometheus.yml
docs/: api.md  architecture.md  auth.md  authoring.md  ci-cd.md  data-model.md  design-language.md  development.md  frontend.md  infra-duplication.md  mcp.md  monitoring.md  packaging.md  progress.md  testing.md
docs-site/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
docs-site/.vitepress/: config.ts
docs-site/.vitepress/theme/: custom.css  index.ts
docs-site/docs/: getting-started.md  index.md
docs/adr/: 0001-generate-mcp-group-a-schemas-from-internal-openapi.md
docs/runbooks/: bring-up.md  deploy.md  migration.md  rollback.md
e2e/: .env.test.example  README.md  docker-compose.e2e.yml  global-setup.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/helpers/: api.ts  config.ts  onboarding.ts  types.ts  users.ts
e2e/tests/: onboarding.spec.ts  spine.spec.ts  ui-smoke.spec.ts
frontend/: .dockerignore  Dockerfile  README.md  components.json  index.html  nginx.conf  openapi.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.test.ts  vite.config.ts  vite.dev-proxy.test.ts  vite.dev-proxy.ts
frontend/.pi/: AGENTS.md
frontend/src/: App.test.tsx  App.tsx  fonts.css  globals.css  main.tsx  routes.tsx  vite-env.d.ts
frontend/src/api/: ApiClientContext.tsx  client.test.ts  client.ts  index.ts  schema.d.ts  swr-config.ts  useApiQuery.ts  usePublicApiQuery.ts
frontend/src/auth/: AuthProvider.test.tsx  AuthProvider.tsx  api-errors.ts  index.ts  (+6 more)
mcp/: .dockerignore  Dockerfile  README.md  internal-openapi.json  pyproject.toml
mcp/.pi/: AGENTS.md
mcp/scripts/: build_generation_input.py  generated_module_header.txt
mcp/src/wren_mcp/: __init__.py  _schemas_generated.py  app.py  auth.py  client.py  config.py  correlation.py  health.py  keys.py  logging.py  main.py  mcp_server.py  metrics.py  prm.py  schemas.py  scopes.py  settings.py  state.py  tokens.py  tool_errors.py  tool_metrics.py  tool_registry.py  tools_read.py  tools_write.py
mcp/tests/: conftest.py  log_capture.py  mcp_harness.py  test_app.py  test_auth.py  test_build_generation_input.py  test_client.py  test_correlation.py  test_correlation_logging.py  test_keys.py  test_mcp_server.py  test_prm.py  test_schemas_snapshot.py  test_scopes.py  test_settings.py  test_state.py  test_tokens.py  test_tool_errors.py  test_tools_read.py  test_tools_write.py  token_factory.py
mcp/tests/snapshots/: tools_schema.json  write_tools_schema.json
scripts/: deploy.sh
scripts/tests/: deploy_test.sh
shared/theme/: fonts.css  tokens.css
shared/wren-common/: pyproject.toml
shared/wren-common/src/wren_common/: health.py  logging.py  metrics.py
shared/wren-common/tests/: test_health.py  test_metrics.py
skill/: SKILL.md
(+270 files in other folders)
