# uv workspace root. This is a virtual root: it defines the workspace and its
# single shared lockfile but is not itself a package (no [project]) and builds no
# artifact. Every member resolves against one root uv.lock, so a shared library
# (for example pydantic) has exactly one version across the backend and MCP images.
#
# Members:
#   backend            -> the `wren` backend (external :8000 + internal :8001)
#   mcp                -> the `wren-mcp` OAuth Resource Server (:9000)
#   contract           -> the dev/test-only cross-package contract harness
#   shared/wren-common -> shared infra (logging, metrics, health) both apps consume
#
# Sync model:
#   Dev/CI: `uv sync --all-packages` builds one shared root .venv with every
#     member (CI syncs once, then runs each member's tools with `uv run --no-sync`).
#   Images: uv resolves ONE shared environment, so a plain `uv sync --package <m>`
#     installs EVERY member and would break the backend<->MCP firewall (the backend
#     image would gain the mcp SDK + wren_mcp; the MCP image asyncpg/alembic/wren).
#     Each Dockerfile instead runs `uv export --frozen --no-emit-workspace
#     --package <m>` for the member's locked third-party set, then editable-installs
#     only that member + wren-common. See docs/packaging.md.
[tool.uv.workspace]
members = ["backend", "mcp", "contract", "shared/wren-common"]
