[project]
# Dev/test-only cross-package contract harness. NEVER shipped: no image builds
# from it. It is the only interpreter where both `wren.*` and `wren_mcp.*`
# import together, so the cross-package coupling lives HERE and nowhere else.
# Neither deployable (backend/mcp) gains a dependency on the other.
name = "wren-contract-tests"
version = "0"
requires-python = ">=3.12"
dependencies = ["wren", "wren-mcp", "pytest>=8"]

[tool.uv]
# No source of our own to build: this is a virtual project that only assembles
# a combined test environment.
package = false

[tool.uv.sources]
# Workspace members: a schema/constant edit in either package is picked up from
# the working tree via the shared root .venv, with no relock. The single root
# uv.lock is the source of truth; there are no per-package lockfiles to touch.
wren = { workspace = true }
wren-mcp = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
