[project]
name = "wren-mcp"
version = "0.1.0"
description = "Wren MCP server: OAuth 2.1 Resource Server (PRM + bearer validation) and thin client of the backend internal API (:8001)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "httpx>=0.27.0",
    "joserfc>=1.0.0",
]

[project.scripts]
wren-mcp = "wren_mcp.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wren_mcp"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom calls Depends()/Query()/... in argument
# defaults by design; these are immutable markers, not mutable-default bugs.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Body",
]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
files = ["src/wren_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=wren_mcp --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["wren_mcp"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "^\\s*\\.\\.\\.\\s*$",
    ": \\.\\.\\.$",
    "if TYPE_CHECKING:",
]
