[project]
name = "wren-mcp"
version = "0.1.0"
description = "Wren MCP server: OAuth 2.1 Resource Server (PRM + bearer validation) and thin client of the backend internal API (:8001)."
requires-python = ">=3.12"
# Upper-major caps are a safety net (the committed uv.lock is the source of
# truth; `uv sync --frozen` enforces it), extending the existing `mcp<2` pattern.
# structlog (calver) is left uncapped so patches are never blocked.
dependencies = [
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.32.0,<1",
    "pydantic>=2.9.0,<3",
    "pydantic-settings>=2.6.0,<3",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0,<1",
    "prometheus-fastapi-instrumentator>=7.0.0,<9",
    "httpx>=0.27.0,<1",
    "joserfc>=1.0.0,<2",
    "mcp>=1.27,<2",
]

[project.scripts]
wren-mcp = "wren_mcp.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0,<10",
    "pytest-cov>=6.0.0,<8",
    "pytest-asyncio>=0.24.0,<2",
    "ruff>=0.8.0,<1",
    "mypy>=1.13.0,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wren_mcp"]

[tool.ruff]
# Shared line-length/target-version/lint config lives in the repo-root ruff.toml;
# only per-package bits stay here. `src` is kept local so first-party import
# detection resolves against this package's own src/tests, not the repo root.
extend = "../ruff.toml"
src = ["src", "tests"]

[tool.ruff.lint.per-file-ignores]
# Tests assert liberally (S101), pass dummy secrets as arguments (S106), and
# bundle multi-condition assertions (PT018).
"tests/**/*.py" = ["S101", "S106", "PT018"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
# Type-check the package plus the test suite so the hand-written token/harness
# fakes are held to the shapes they stand in for (a diverged fake fails
# ``mypy --strict``). The flat ``tests`` layout resolves as top-level modules.
files = ["src/wren_mcp", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=wren_mcp --cov-report=term-missing --strict-markers --strict-config"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["wren_mcp"]
branch = true

[tool.coverage.report]
show_missing = true
# Hard coverage floor enforced by every `pytest` run (local and `just
# test-mcp`), not just CI; the redundant `--cov-fail-under` CLI flag was dropped
# from ci.yml when this moved here.
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "^\\s*\\.\\.\\.\\s*$",
    ": \\.\\.\\.$",
    "if TYPE_CHECKING:",
]
