[project]
name = "wren-common"
version = "0.1.0"
description = "Shared Wren infrastructure (structured logging, HTTP metrics, health endpoints) consumed by the backend and MCP deployables through the uv workspace. Carries no backend or MCP dependency: app-specific values are injected."
requires-python = ">=3.12"
# Upper-major caps are a safety net (the committed root uv.lock is the source of
# truth; `uv sync --frozen` enforces it), matching the backend/mcp convention.
# structlog (calver) is left uncapped so patches are never blocked. Only the four
# libraries the three modules import at module scope are listed: health.py imports
# fastapi.APIRouter + fastapi.responses.JSONResponse; metrics.py imports
# starlette.responses.Response (arriving transitively via fastapi, matching the
# backend/mcp convention of not listing starlette explicitly).
dependencies = [
    "fastapi>=0.115.0,<1",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0,<1",
    "prometheus-fastapi-instrumentator>=7.0.0,<9",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<10",
    "ruff>=0.8.0,<1",
    "mypy>=1.13.0,<3",
    # fastapi.testclient.TestClient requires httpx; used by the seam tests.
    "httpx>=0.27.0,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wren_common"]

[tool.ruff]
# Shared line-length/target-version/lint config lives in the repo-root ruff.toml;
# only per-package bits stay here. `src` is kept local so first-party import
# detection resolves against this package's own src/tests, not the repo root.
extend = "../../ruff.toml"
src = ["src", "tests"]

[tool.ruff.lint.per-file-ignores]
# Tests assert liberally (S101) and bundle multi-condition assertions (PT018).
"tests/**/*.py" = ["S101", "PT018"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
files = ["src/wren_common", "tests"]

[tool.pytest.ini_options]
# The seam tests exercise the two injection points (metrics registry, readiness
# checks) directly. logging.py is verbatim and covered by the backend suite, so
# this package's suite carries no coverage gate of its own.
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"
